# xbmc-pvr-livestreams

./: .gitignore  Makefile.am  README.md  changelog.txt  configure.ac  make.cmd
addons/: Makefile.am
addons/pvr.livestreams/: Makefile.am  addon.xml  addon.xml.in  example.xml
addons/pvr.livestreams/resources/: settings.xml
addons/pvr.livestreams/resources/language/English/: strings.po
project/VS2013/: xbmc-pvr-livestreams.sln
project/VS2013/livestreamspvr/: xbmc-pvr-livestreams.vcxproj
project/VS2013/platform/: platform.vcxproj
src/: Makefile.am
src/livestreamspvr/: Makefile.am  PVRLiveStreamsData.cpp  PVRLiveStreamsData.h  client.cpp  client.h  slre.cpp  slre.h
src/platform/posix/: os-socket.h  os-types.h
src/platform/sockets/: serialport.h  tcp.h
src/platform/threads/: mutex.h  threads.h
src/platform/windows/: dlfcn-win32.cpp  dlfcn-win32.h  os-socket.h  os-threads.cpp  os-threads.h  os-types.h  serialport.cpp
